# Barvazim

./: .gitignore  README.md  bz  pyproject.toml
categories/android/: README.md  bun.lockb  package.json  script.js
src/barvazim/: __init__.py
writeups/: template.typ
writeups/bsides-2024/forensics/: skibidi.typ
