[project]
name = "barvazim"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"barvazim" = "barvazim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/barvazim"]
